--- a/css/eje-css-grid.css
+++ b/css/eje-css-grid.css
@@ -49,21 +49,35 @@ footer{
     }
 }
 
-@media screen and (min-width:1024px) {
-    #container-grid{
-        grid-template: 
-        "header header header" 100px
-        "navbar main sidebar" auto
-        "footer footer footer" 50px /
-        200px auto 100px;
-    }
-}
-
 @media screen and (min-width:1308px) {
     #container-grid{
          max-width: 1200px;
          margin: 0 auto;
      }
     }
+
+/*Resolución tabletas*/
+@media screen and (min-width:768px) {
+}
+
+/*Resolución resoluciones medias*/
+@media screen and (min-width:1024px) {
+    
+}
+
+/*Resolución resoluciones macro*/
+@media screen and (min-width:1308px) {
+  body{
+      background-color: #EAEAEA;
+  }
+  #container-grid{
+      max-width: 1300px;
+      margin: 0 auto;
+  }
+  nav{
+      width: 100%;
+      max-width: 1300px;
+  }
+}
     
 
