--- a/css/estilos-css-grid.css
+++ b/css/estilos-css-grid.css
@@ -1,21 +1,95 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Marcellus&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root {
+    --azulclaro: #48D6ED;
+    --azuloscuro: #337AB7;
+    --azulnegro: #303342;
+    --negro: #333333;
+    --negro2: #000;
+    --gris: #B2B3B3;
+    --fondo: #FFFEFC;
+    --verdeazul: #157A8A;
+    --Magenta: #9C2759;
+    --blanco: #fff;
+    --degradado: linear-gradient(49.54deg, #337AB7 2.89%, #0B3860 80.34%);
+}
+
+* {
+    margin: 0;
+}
+
+body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
 }
-h1,h2,h3,h4,h5{
-    font-family: 'Roboto', sans-serif;
-} 
-#container-grid {
-    display: grid;
-    grid-template:
-        "nav" auto
-        "banner" 400px
-        "descripcion" auto
-        "feature" auto
-        "ubicacion" auto
-        "opinion" auto
-        "footer" auto
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-family: 'Marcellus', serif;
 }
+
+#container-grid{
+
+        display: grid;
+        grid-template:
+            "nav" auto
+            "banner" 400px
+            "descripcion" auto
+            "feature" auto
+            "ubicacion" auto
+            "opinion" auto
+            "footer" auto
+    }
+
+@media screen and (min-width:1024px) {
+nav{
+    background-color: var(--negro2);
+    grid-template-columns: 200px;
+    grid-template-areas: "logo";
+}
+.menu{
+    display: block;
+    background-color: var(--negro2);
+    justify-self: end;
+    align-self: center;
+    padding: 0 1rem;
+}
+.menu-hr{
+    display: none;
+}
+.navbar-button{
+    background-color: var(--azuloscuro);
+    align-self: center;
+}
+.logo img{
+    width: 100%;
+}
+.logo i{
+    display: none;
+}
+.item{
+    margin: 0 1rem;
+    align-self: center;
+}
+nav a{
+    text-align: left;
+}
+nav a:hover{
+    background-color: transparent;
+    color: var(--azuloscuro);
+}
+
+}
+
+/*Resolución tabletas*/
+@media screen and (min-width:768px) {
+   
+}
+
+/*Resolución resoluciones macro*/
 @media screen and (min-width:1308px) {
     body{
         background-color: #EAEAEA;
@@ -24,10 +98,7 @@ h1,h2,h3,h4,h5{
         max-width: 1300px;
         margin: 0 auto;
     }
-    nav{
-        width: 100%;
-        max-width: 1300px;
-    }
+
 }
 nav {
     grid-area: nav;
@@ -37,6 +108,9 @@ nav {
         "menu";
     font-family: 'Marcellus', serif;
     font-size: 1.3em;
+    position: fixed;
+width: 100%;
+z-index: 100;
 }
 .logo {
     grid-area: logo;
@@ -48,14 +122,12 @@ nav {
     background-color: var(--negro2);
     padding: 1rem;
 }
-
 .logo img {
     justify-self: start;
     width: 50%;
     max-width: 180px;
 }
-
-.logo i {
+.logo i{
     grid-area: menu-bars;
     justify-self: end;
     color: var(--blanco);
@@ -63,7 +135,7 @@ nav {
 }
 .menu {
     grid-area: menu;
-    display: grid;
+    display: none;
     background-color: rgba(1, 10, 52, 0.838);
 }
 .menu-hr {
@@ -96,5 +168,11 @@ nav a:hover {
     font-family: 'Marcellus', serif;
     color: var(--blanco);
 }
-
-
+#banner {
+    background-image: url('../img/index//slide1.jpg');
+    background-size: cover;
+    background-position: 50% 50%;
+    min-height: 400px;
+    margin-top: 60px;
+    min-height: 400px;
+}
