--- a/css/ej-css-grid.css
+++ b/css/ej-css-grid.css
@@ -1,13 +1,13 @@
 *{
     margin: 0;
 }
-body{
-    font-size: 16px;
+
+html{
+    height: 100%;
 }
 
-header{
-    grid-area: header;
-    background-color: blue;
+body{
+    font-size: 16px;
 }
 
 #container-grid{
@@ -20,23 +20,33 @@ header{
     "footer" 50px;
     text-align: center;
 }
-nav{
-    background-color: yellow;
-    grid-area: navbar;
+
+header{
+    grid-area: header;
+    background-color: blue;
 }
+
+nav{
+    grid-area: navbar;
+    background-color: yellow;
+}
+
 main{
     grid-area: main;
     background-color: blueviolet;
 }
+
 aside{
     grid-area: sidebar;
     background-color: green;
 }
+
 footer{
     grid-area: footer;
     background-color: red;
 }
 
+/*Resolución tabletas*/
 @media screen and (min-width:768px) {
     #container-grid{
         grid-template-columns: 200px auto;
@@ -49,35 +59,29 @@ footer{
     }
 }
 
-@media screen and (min-width:1308px) {
-    #container-grid{
-         max-width: 1200px;
-         margin: 0 auto;
-     }
-    }
-
-/*Resolución tabletas*/
-@media screen and (min-width:768px) {
-}
-
 /*Resolución resoluciones medias*/
 @media screen and (min-width:1024px) {
-    
+    #container-grid{
+        grid-template: 
+        "header header header" 100px
+        "navbar main sidebar" auto
+        "footer footer footer" 50px /
+        200px auto 100px;
+    }
 }
 
 /*Resolución resoluciones macro*/
 @media screen and (min-width:1308px) {
-  body{
-      background-color: #EAEAEA;
-  }
-  #container-grid{
-      max-width: 1300px;
-      margin: 0 auto;
-  }
-  nav{
-      width: 100%;
-      max-width: 1300px;
-  }
+    .container-grid{
+         max-width: 1200px;
+         margin: 0 auto;
+    }
+
 }
-    
+
+
+
+
+
+
 
